Bugfix: do not link run_@CLASSNAME@.o and scan_@CLASSNAME@.o to the lib
Linking run_@CLASSNAME@.o and scan_@CLASSNAME@.o to the model library
gives a linking error in case we use dynamic libraries.

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -2,11 +2,10 @@ DIR          := @DIR@
 MODNAME      := lib@CLASSNAME@
 
 LIB@CLASSNAME@_SRC :=
+EXE@CLASSNAME@_SRC :=
 
 ifneq ($(findstring two_scale,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
-		$(DIR)/run_@CLASSNAME@.cpp \
-		$(DIR)/scan_@CLASSNAME@.cpp \
 		$(DIR)/@CLASSNAME@_info.cpp \
 		$(DIR)/@CLASSNAME@_slha_io.cpp \
 		$(DIR)/@CLASSNAME@_physical.cpp \
@@ -19,12 +18,13 @@ LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp \
 		$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp
+EXE@CLASSNAME@_SRC += \
+		$(DIR)/run_@CLASSNAME@.cpp \
+		$(DIR)/scan_@CLASSNAME@.cpp
 endif
 
 ifneq ($(findstring lattice,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
-		$(DIR)/run_@CLASSNAME@.cpp \
-		$(DIR)/scan_@CLASSNAME@.cpp \
 		$(DIR)/@CLASSNAME@_info.cpp \
 		$(DIR)/@CLASSNAME@_slha_io.cpp \
 		$(DIR)/@CLASSNAME@_physical.cpp \
@@ -35,17 +35,28 @@ LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_lattice_low_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_lattice_model.cpp \
 		$(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp
+EXE@CLASSNAME@_SRC += \
+		$(DIR)/run_@CLASSNAME@.cpp \
+		$(DIR)/scan_@CLASSNAME@.cpp
 endif
 
 # remove duplicates in case all algorithms are used
 LIB@CLASSNAME@_SRC := $(sort $(LIB@CLASSNAME@_SRC))
+EXE@CLASSNAME@_SRC := $(sort $(EXE@CLASSNAME@_SRC))
 
 LIB@CLASSNAME@_OBJ := \
 		$(patsubst %.cpp, %.o, $(filter %.cpp, $(LIB@CLASSNAME@_SRC))) \
 		$(patsubst %.f, %.o, $(filter %.f, $(LIB@CLASSNAME@_SRC)))
 
+EXE@CLASSNAME@_OBJ := \
+		$(patsubst %.cpp, %.o, $(filter %.cpp, $(EXE@CLASSNAME@_SRC))) \
+		$(patsubst %.f, %.o, $(filter %.f, $(EXE@CLASSNAME@_SRC)))
+
 LIB@CLASSNAME@_DEP := \
 		$(LIB@CLASSNAME@_OBJ:.o=.d)
+
+EXE@CLASSNAME@_DEP := \
+		$(EXE@CLASSNAME@_OBJ:.o=.d)
 
 LIB@CLASSNAME@     := $(DIR)/$(MODNAME)$(LIBEXT)
 
@@ -59,10 +70,14 @@ all-$(MODNAME): $(LIB@CLASSNAME@)
 
 clean-$(MODNAME):
 		rm -rf $(LIB@CLASSNAME@_OBJ)
+		rm -rf $(EXE@CLASSNAME@_OBJ)
 
 distclean-$(MODNAME): clean-$(MODNAME)
 		rm -rf $(LIB@CLASSNAME@_DEP)
 		rm -rf $(LIB@CLASSNAME@)
+		rm -rf $(EXE@CLASSNAME@_DEP)
+		rm -rf $(RUN_@CLASSNAME@_EXE)
+		rm -rf $(SCAN_@CLASSNAME@_EXE)
 
 clean::         clean-$(MODNAME)
 
@@ -113,10 +128,10 @@ run-metacode-$(MODNAME): $(METACODE_STAMP_@CLASSNAME@)
 $(METACODE_STAMP_@CLASSNAME@): $(DIR)/start.m $(DIR)/FlexibleSUSY.m $(META_SRC) $(TEMPLATES)
 		$(MATH) -run "Get[\"$<\"]; Quit[]"
 
-$(LIB@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(DIR)/run_@CLASSNAME@.o $(DIR)/scan_@CLASSNAME@.o: CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
+$(LIB@CLASSNAME@_DEP) $(EXE@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(EXE@CLASSNAME@_OBJ): CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
 
 ifeq ($(ENABLE_LOOPTOOLS),yes)
-$(LIB@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(DIR)/run_@CLASSNAME@.o $(DIR)/scan_@CLASSNAME@.o: CPPFLAGS += $(LOOPTOOLSFLAGS)
+$(LIB@CLASSNAME@_DEP) $(EXE@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(EXE@CLASSNAME@_OBJ): CPPFLAGS += $(LOOPTOOLSFLAGS)
 endif
 
 $(LIB@CLASSNAME@): $(LIB@CLASSNAME@_OBJ)
@@ -128,7 +143,7 @@ $(RUN_@CLASSNAME@_EXE): $(DIR)/run_@CLASSNAME@.o $(LIB@CLASSNAME@) $(LIBFLEXI) $
 $(SCAN_@CLASSNAME@_EXE): $(DIR)/scan_@CLASSNAME@.o $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY)
 		$(CXX) -o $@ $(call abspathx,$^) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
-ALLDEP += $(LIB@CLASSNAME@_DEP)
-ALLSRC += $(LIB@CLASSNAME@_SRC)
+ALLDEP += $(LIB@CLASSNAME@_DEP) $(EXE@CLASSNAME@_DEP)
+ALLSRC += $(LIB@CLASSNAME@_SRC) $(EXE@CLASSNAME@_SRC)
 ALLLIB += $(LIB@CLASSNAME@)
 ALLEXE += $(RUN_@CLASSNAME@_EXE) $(SCAN_@CLASSNAME@_EXE)
