introduce variable for the object files of the executables

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -60,8 +60,10 @@ EXE@CLASSNAME@_DEP := \
 
 LIB@CLASSNAME@     := $(DIR)/$(MODNAME)$(LIBEXT)
 
+RUN_@CLASSNAME@_OBJ := $(DIR)/run_@CLASSNAME@.o
 RUN_@CLASSNAME@_EXE := $(DIR)/run_@CLASSNAME@.x
 
+SCAN_@CLASSNAME@_OBJ := $(DIR)/scan_@CLASSNAME@.o
 SCAN_@CLASSNAME@_EXE := $(DIR)/scan_@CLASSNAME@.x
 
 .PHONY:         all-$(MODNAME) clean-$(MODNAME) distclean-$(MODNAME) run-metacode-$(MODNAME)
@@ -137,10 +139,10 @@ endif
 $(LIB@CLASSNAME@): $(LIB@CLASSNAME@_OBJ)
 		$(MAKELIB) $@ $^
 
-$(RUN_@CLASSNAME@_EXE): $(DIR)/run_@CLASSNAME@.o $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY)
+$(RUN_@CLASSNAME@_EXE): $(RUN_@CLASSNAME@_OBJ) $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY)
 		$(CXX) -o $@ $(call abspathx,$^) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
-$(SCAN_@CLASSNAME@_EXE): $(DIR)/scan_@CLASSNAME@.o $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY)
+$(SCAN_@CLASSNAME@_EXE): $(SCAN_@CLASSNAME@_OBJ) $(LIB@CLASSNAME@) $(LIBFLEXI) $(LIBLEGACY)
 		$(CXX) -o $@ $(call abspathx,$^) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
 ALLDEP += $(LIB@CLASSNAME@_DEP) $(EXE@CLASSNAME@_DEP)
