define version major, minor and patch level in config.h

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -1,6 +1,6 @@
 # Package information
 PKGNAME    := @PKGNAME@
-VERSION    := @VERSION@
+VERSION    := @FLEXIBLESUSY_VERSION@
 ABSBASEDIR := @ABSBASEDIR@
 
 # Makefile modules
