--- a/doc/version.tex.in
+++ b/doc/version.tex.in
@@ -1,2 +1,2 @@
-\newcommand{\FlexibleSUSYVersion}{@VERSION@\xspace}
+\newcommand{\FlexibleSUSYVersion}{@FLEXIBLESUSY_VERSION@\xspace}
 \newcommand{\FlexibleSUSY}{@PKGNAME@\xspace}
