--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -20,6 +20,7 @@
 
 #include "@ModelName@_two_scale_model.hpp"
 #include "wrappers.hpp"
+#include "linalg2.hpp"
 #include "logger.hpp"
 #include "error.hpp"
 #include "root_finder.hpp"
