always write out MINPAR and EXTPAR blocks
There might be cases where not all blocks and or parameters are given.
In this case it's important to write out the used values of the
unspecified parameters to avoid confusion.

--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -39,6 +39,16 @@ namespace flexiblesusy {
 {
 }
 
+void @ModelName@_slha_io::set_extpar(const @ModelName@_input_parameters& input)
+{
+@writeSLHAExtparBlock@
+}
+
+void @ModelName@_slha_io::set_minpar(const @ModelName@_input_parameters& input)
+{
+@writeSLHAMinparBlock@
+}
+
 void @ModelName@_slha_io::set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems)
 {
    std::ostringstream spinfo;
