--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -85,6 +85,8 @@ int main(int argc, const char* argv[])
 
    // output
    slha_io.set_spinfo(problems);
+   slha_io.set_minpar(input);
+   slha_io.set_extpar(input);
    if (!problems.have_serious_problem())
       slha_io.set_spectrum(model);
 
