--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -50,6 +50,7 @@ public:
    void read_from_file(const std::string&);
    void set_extpar(const @ModelName@_input_parameters&);
    void set_minpar(const @ModelName@_input_parameters&);
+   void set_sminputs(const softsusy::QedQcd&);
    template <class T> void set_spectrum(const @ModelName@<T>&);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
    void write_to_file(const std::string&);
