--- a/templates/TestE6SSM/FlexibleSUSY.m.in
+++ b/templates/TestE6SSM/FlexibleSUSY.m.in
@@ -13,7 +13,8 @@ EXTPAR = { {61, LambdaInput},
            {62, KappaInput},
            {63, muPrimeInput},
            {64, BmuPrimeInput},
-           {65, vSInput}
+           {65, vSInput},
+           {66, Lambda12Input}
          };
 
 DefaultParameterPoint = {
@@ -25,7 +26,8 @@ DefaultParameterPoint = {
     {KappaInput, 0.2},
     {muPrimeInput, 10000},
     {BmuPrimeInput, 10000},
-    {vSInput, 10000}
+    {vSInput, 10000},
+    {Lambda12Input, 0.2}
 };
 
 EWSBOutputParameters = { mHd2, mHu2, ms2 };
@@ -62,10 +64,10 @@ HighScaleInput={
    {mHPrime2, m0^2},
    {mHBarPrime2, m0^2},
    {\[Kappa], UNITMATRIX[3] KappaInput},
-   {\[Lambda], UNITMATRIX[2] LambdaInput},
+   {\[Lambda], UNITMATRIX[2] Lambda12Input},
    {\[Lambda]3, LambdaInput},
    {T[\[Kappa]], UNITMATRIX[3] Azero KappaInput},
-   {T[\[Lambda]], UNITMATRIX[2] Azero LambdaInput},
+   {T[\[Lambda]], UNITMATRIX[2] Azero Lambda12Input},
    {T[\[Lambda]3], Azero LambdaInput},
    {MassB, m12},
    {MassWB,m12},
