--- a/templates/TestE6SSM/FlexibleSUSY.m.in
+++ b/templates/TestE6SSM/FlexibleSUSY.m.in
@@ -32,9 +32,9 @@ DefaultParameterPoint = {
 
 EWSBOutputParameters = { mHd2, mHu2, ms2 };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = 3000;
 
-SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
+SUSYScaleFirstGuess = 3000;
 
 SUSYScaleInput = {
    {B[muPrime], BmuPrimeInput},
