Compatibility fix: use absolute path to FlexibleSUSY.m module
Sophie Underwood had problems loading the FlexibleSUSY` module via

  Needs["FlexibleSUSY`", "FlexibleSUSY.m"];

This fix uses the absolute path to the FlexibleSUSY.m file

  Needs["FlexibleSUSY`", "meta/FlexibleSUSY.m"];

which solves the problem on Sophies machine.

--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -5,7 +5,7 @@ $flexiblesusyTemplateDir = FileNameJoin[{Directory[], "templates"}];
 AppendTo[$Path, $flexiblesusyMetaDir];
 
 Needs["SARAH`"];
-Needs["FlexibleSUSY`", "FlexibleSUSY.m"];
+Needs["FlexibleSUSY`", FileNameJoin[{$flexiblesusyMetaDir, "FlexibleSUSY.m"}]];
 
 workingDirectory = Directory[];
 $sarahOutputDir = FileNameJoin[{workingDirectory, "Output"}];
