--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -66,13 +66,18 @@ RUN_@CLASSNAME@_EXE := $(DIR)/run_@CLASSNAME@.x
 SCAN_@CLASSNAME@_OBJ := $(DIR)/scan_@CLASSNAME@.o
 SCAN_@CLASSNAME@_EXE := $(DIR)/scan_@CLASSNAME@.x
 
-.PHONY:         all-$(MODNAME) clean-$(MODNAME) distclean-$(MODNAME) run-metacode-$(MODNAME)
+.PHONY:         all-$(MODNAME) clean-$(MODNAME) clean-$(MODNAME)-src \
+		distclean-$(MODNAME) run-metacode-$(MODNAME)
 
 all-$(MODNAME): $(LIB@CLASSNAME@)
 
 clean-$(MODNAME):
 		rm -rf $(LIB@CLASSNAME@_OBJ)
 		rm -rf $(EXE@CLASSNAME@_OBJ)
+
+clean-$(MODNAME)-src:
+		rm -rf $(LIB@CLASSNAME@_SRC)
+		rm -rf $(EXE@CLASSNAME@_SRC)
 
 distclean-$(MODNAME): clean-$(MODNAME)
 		rm -rf $(LIB@CLASSNAME@_DEP)
