do not include dependency files if doc-* target is called

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -74,7 +74,9 @@ ifneq ($(MAKECMDGOALS),doc)
 ifeq ($(ENABLE_COMPILE),yes)
 ifeq ($(findstring clean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring distclean-,$(MAKECMDGOALS)),)
+ifeq ($(findstring doc-,$(MAKECMDGOALS)),)
 -include $(ALLDEP)
+endif
 endif
 endif
 endif
