adding helper script which returns the list of SARAH model files
This script will be used in the future to extend the dependencies
of the generated C++ source code files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 config/config.h
 config/version
 config/required_sarah_version.m
+config/list_sarah_model_files.sh
 config.status
 config.log
 config.boost
