ensure that the SARAH file do exist
This will prevent errors in the makefile in case the dependency
does not exist (for whatever reason).

--- a/config/list_sarah_model_files.sh.in
+++ b/config/list_sarah_model_files.sh.in
@@ -43,6 +43,8 @@ files = Join[{ModelFile},
              FileNameJoin[{modelDir, #}]& /@ {"parameters.m", "particles.m"}
             ];
 
+files = Select[files, FileExistsQ];
+
 WriteString["stderr", files[[1]] <> " " <> files[[2]] <> " " <> files[[3]]];
 
 Quit[];
