adding declarations of single beta functions

--- a/templates/two_scale_susy_parameters.hpp.in
+++ b/templates/two_scale_susy_parameters.hpp.in
@@ -43,6 +43,8 @@ public:
    const @ModelName@_input_parameters& get_input() const;
    void set_input(const @ModelName@_input_parameters&);
 
+@singleBetaFunctionsDecls@
+
    @ModelName@_susy_parameters calc_beta() const;
    virtual void clear();
 
